--- a/docs/编码.md
+++ b/docs/编码.md
@@ -1,12 +1,22 @@
 参考GRPC，共有4种编码类型
 
+## GRPC
+
 - Varint：	int32, int64, uint32, uint64, sint32, sint64, bool, enum
 - 64-bit：fixed64, sfixed64, double
 - 32-bit：fixed32, sfixed32, float
 - 长度限定：string, bytes, embedded messages, packed repeated fields
+
+## TSBuffer
+- 定长：8~64位：[u]int8~64, float32/64, number, boolean, enum
+- 可变长度
+
+`Schema` -> `encoder` & `decoder` & `lengthType`
 
 Type与编码方式没有必然关系
 可能Type内部变了，但编码方式完全不变
 也可能Type变了，但编码方式不变
 
 取决于Type自身
+
+顺序编解码
